--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Tic Tac Toe</title>
 
 	<link rel="stylesheet" href="style.css">
-	<link href='http://fonts.googleapis.com/css?family=Gloria+Hallelujah' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Gloria+Hallelujah' rel='stylesheet' type='text/css'>
 
 	<!-- Firebase -->
 <script src="https://cdn.firebase.com/js/client/1.0.17/firebase.js"></script>
